public/css/results.css
.results_area {
    width: var(--content-width);
    margin: 0px calc((100vw - var(--content-width)) / 2) 30px calc((100vw - var(--content-width)) / 2);
    min-height: calc(100vh - 80px - 175px - 135px - 30px); /*total height - header h - subheader h - footer h - margin-bottom*/;
    /* overflow-y: visible;
    overflow-x: hidden; */
    position: relative;
}
@media (max-width: 500px) {
    .results_area {
        width: 100vw;
        margin: 0px 0px 30px 0px;
        min-height: calc(100vh - 80px - 205px - 135px - 30px); /*total height - header h - subheader h - footer h - margin-bottom*/
    }
}

.results_buttoncontainer {
    display: flex;
    flex-wrap: nowrap;
    margin-top: 5px;
    margin-bottom: 10px;
}
.results_left_buttoncontainer {
    margin: 20px 5px 10px 10px;
}
.results_right_buttoncontainer {
    margin: 20px 10px 10px 5px;
}
@media (max-width: 500px) {
    .results_buttoncontainer {
        display: block;
    }
    .results_left_buttoncontainer {
        width: fit-content;
        margin: 0px calc((100vw - 225px)/2);
        margin-bottom: 40px;
        padding-top: 20px;
    }
    .results_right_buttoncontainer {
        width: fit-content;
        margin: 0px calc((100vw - 225px)/2);
        padding-bottom: 20px;
    }
}
.results_button_text {
    font-size: 25px;
}
.active_button_text {
    color: var(--color-white);
}
.inactive_button_text {
    color: var(--color-grey);
}

.results_benchmark_process_select {
    margin: 20px 10px 40px 10px;
}
.results_benchmark_process_select .v-select__selection-text {
    font-size: 14px;
}

.hidden_chart {
    display: none !important;
}

.bar_chart {
    max-width: 480px;
    margin-bottom: 20px;
    min-height: 369px;
}
@media (max-width: 500px) {
    .bar_chart {
        padding: 0px 10px;
        min-height: fit-content;
    }
}

/* .pdf_bar_chart {
    
} */

.ashby_chart {
    max-width: 480px;
    margin-bottom: 10px;
}
@media (max-width: 500px) {
    .ashby_chart {
        padding: 0px 10px;
    }
}

.pie_chart {
    margin-bottom: 30px;
}

.custom_legend_container {
    display: flex;
    justify-content: center;
    margin-bottom: 20px;
}

